/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

option java_package = "org.apache.pulsar.transaction.proto";
option optimize_for = LITE_RUNTIME;

message StoredTxnID {
    int64 mostSigBits = 1;
    int64 leastSigBits = 2;
}

enum StoredTxnStatus {
    OPEN = 0;
    COMMITTING = 1;
    COMMITTED = 2;
    ABORTING = 3;
    ABORTED = 4;
}

message StoredPosition {
    int64 ledger_id = 1;
    int64 entry_id = 2;
}

message StoredEntryInfo {
    StoredPosition position = 1;
    int64 sequenceId = 2;
}

message StoredTxnMeta {
    StoredTxnID txn_id = 1;
    repeated StoredEntryInfo entry_info = 2;
    StoredTxnStatus status = 3;
    int64 committed_ledger = 4;
    int64 committed_entry = 5;
}

enum StoredStatus {
    START   = 0; // the index log start marker
    MIDDLE  = 1; // index log
    END     = 2; // the index log end marker
}

message StoredTxn {
    StoredStatus stored_status = 1;
    StoredPosition position= 2;
    StoredTxnMeta txn_meta = 3;
}

enum MarkerStatus {
    COMMIT = 0;
    ABORT = 1;
}

message Marker {
    StoredTxnID txn_id = 1;
    int64 committed_ledger = 2;
    int64 committed_entry = 3;
    MarkerStatus status = 4;
}
